# mojo-gpu-puzzles

./: README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
book/i18n/ko/src/puzzle_23/: benchmarking.md
book/i18n/ko/src/puzzle_24/: warp_extra.md  warp_simt.md  warp_sum.md
book/src/puzzle_01/: layout_tensor_preview.md
book/src/puzzle_10/: memcheck.md
book/src/puzzle_17/: puzzle_17.md
book/src/puzzle_23/: benchmarking.md  elementwise.md
book/src/puzzle_24/: puzzle_24.md  warp_extra.md  warp_simt.md  warp_sum.md
book/src/puzzle_25/: puzzle_25.md
book/src/puzzle_26/: puzzle_26.md
book/src/puzzle_27/: block_broadcast.md  block_prefix_sum.md  block_sum.md  puzzle_27.md
book/src/puzzle_34/: advanced_cluster_patterns.md  cluster_collective_ops.md
problems/p01/: p01.mojo
problems/p02/: p02.mojo
problems/p03/: p03.mojo
problems/p04/: p04.mojo  p04_layout_tensor.mojo  p04_tile_tensor.mojo
problems/p05/: p05.mojo  p05_layout_tensor.mojo
problems/p06/: p06.mojo
problems/p07/: p07.mojo  p07_layout_tensor.mojo
problems/p08/: p08.mojo  p08_layout_tensor.mojo
problems/p09/: p09.mojo
problems/p11/: p11.mojo
problems/p12/: p12.mojo
problems/p13/: p13.mojo
problems/p14/: p14.mojo
problems/p15/: p15.mojo
problems/p16/: p16.mojo
problems/p17/: p17.py
problems/p17/op/: conv1d.mojo
problems/p18/: p18.py
problems/p18/op/: softmax.mojo
problems/p18/test/: test_softmax.mojo
problems/p19/: p19.py
problems/p19/op/: attention.mojo
problems/p20/op/: conv1d.mojo
problems/p21/op/: embedding.mojo
problems/p22/op/: layernorm_linear.mojo
problems/p23/: p23.mojo
problems/p24/: p24.mojo
problems/p25/: p25.mojo
problems/p26/: p26.mojo
problems/p27/: p27.mojo
problems/p28/: p28.mojo
problems/p29/: p29.mojo
problems/p33/: p33.mojo
problems/p34/: p34.mojo
problems/p35/: p35.mojo
scripts/: check_skeletons.py  compile_problems.sh
solutions/: config.sh  run.sh  sanitizer.sh
solutions/p17/: p17.py
solutions/p18/: p18.py
solutions/p22/op/: layernorm_linear.mojo
solutions/p23/: p23.mojo
solutions/p24/: p24.mojo
solutions/p25/: p25.mojo
solutions/p26/: p26.mojo
solutions/p27/: p27.mojo
solutions/p34/: p34.mojo
